--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-slider": "^2.0.6",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20"
   },
