--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@syncfusion/ej2-react-popups": "^22.2.5",
     "@syncfusion/ej2-react-schedule": "^22.2.5",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
