--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.0",
     "@clerk/clerk-react": "^4.23.1",
     "@paypal/react-paypal-js": "^8.1.1",
     "@syncfusion/ej2-react-grids": "^22.2.5",
