cambios para el login

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.env
 node_modules
 dist
 dist-ssr
 *.local
+package-lock.json
+pf-elixir-cars-back
 
 # Editor directories and files
 .vscode/*
