--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_REACT_APP_AUTH0_DOMAIN=dev-edgar-tello.us.auth0.com
 VITE_REACT_APP_AUTH0_CLIENT_ID=iNhJdqUfBNOTXagOlhKZNWFgbjMoGeWf
+VITE_REACT_APP_URL_BACKEND=https://pf-elixir-cars-back-production.up.railway.app/
